composer: update author information

--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,27 @@
 {
-  "name": "jenkins-khan/jenkins-api",
-  "type": "library",
-  "description": "Jenkins PHP API",
-  "keywords": ["jenkins", "api"],
-  "homepage": "https://github.com/jenkins-khan/jenkins-php-api",
-  "license": "MIT",
-  "autoload": {
-    "psr-4": {
-      "ooobii\\": "src/"
-    }
-  },
-  "require-dev": {
-    "atoum/atoum": "2.0.1"
-  },
-  "config": {
-    "bin-dir": "bin"
-  },
-  "authors": [
-    {
-      "name": "jenkins-khan",
-      "homepage": "https://github.com/jenkins-khan/jenkins-php-api"
-    }
-  ]
+    "name": "jenkins-khan/jenkins-api",
+    "type": "library",
+    "description": "Jenkins PHP API",
+    "keywords": [
+        "jenkins",
+        "api",
+        "cli",
+        "management"
+    ],
+    "homepage": "https://github.com/ooobii/jenkins-php-api",
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "ooobii\\": "src/"
+        }
+    },
+    "config": {
+        "bin-dir": "bin"
+    },
+    "authors": [
+        {
+            "name": "Matthew Wendel <matthewwendel77@gmail.com>",
+            "homepage": "https://github.com/ooobii"
+        }
+    ]
 }
