--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.sqlite
+.project
+.buildpath
+/.settings
+.*.un~
+.*.swp
+*.*~
+*.sqlite
+*.done
 composer.lock
-bin/atoum
-vendor/*
+/vendor/*
+/.phpunit.result.cache
