--- a/composer.json
+++ b/composer.json
@@ -44,17 +44,25 @@
     },
     "require": {
         "php": "^8.1",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "psr/http-message":"^1.0.1",
+        "psr/http-factory":"^1.0.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
         "phpunit/phpunit": "^9.5.20",
-        "squizlabs/php_codesniffer": "^3.6.2",
+        "squizlabs/php_codesniffer": "^3.7",
         "sebastian/phpcpd": "^6.0.3",
         "phploc/phploc": "^7.0.2",
-        "phpstan/phpstan": "^1.7.1",
+        "phpstan/phpstan": "^1.7.14",
         "icanhazstring/composer-unused": "^0.8.2",
-        "nikic/php-parser": "^v4.13.2"
+        "nikic/php-parser": "^v4.13.2",
+        "guzzlehttp/guzzle":"^7.4",
+        "guzzlehttp/psr7":"^2.4",
+        "php-http/client-common": "^2.5",
+        "php-http/multipart-stream-builder": "^1.2.0",
+        "php-http/guzzle7-adapter": "^1.0",
+        "php-http/promise": "^1.1"
     },
     "autoload": {
         "psr-4": {
