--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "php": "^8.1",
         "ext-dom": "*",
         "psr/http-message":"^1.0.1",
-        "psr/http-factory":"^1.0.1"
+        "psr/http-factory":"^1.0.1",
+        "teknoo/immutable": "^3.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
