--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "teknoo/immutable": "^3.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9.5.20",
         "squizlabs/php_codesniffer": "^3.7",
         "sebastian/phpcpd": "^6.0.3",
