--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,9 @@
     },
     "autoload": {
         "psr-4": {
-            "Teknoo\\Jenkins\\": "src/"
+            "Teknoo\\Jenkins\\": "src/",
+            "Teknoo\\Jenkins\\Transport\\Guzzle6\\": "infrastructures/Guzzle6",
+            "Teknoo\\Jenkins\\Transport\\HttpPlug\\": "infrastructures/HttpPlug"
         }
     }
 }
