--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "sebastian/phpcpd": "^6.0.3",
         "phploc/phploc": "^7.0.2",
         "phpstan/phpstan": "^1.7.14",
+        "symfony/property-access": "^6.0",
         "icanhazstring/composer-unused": "^0.8.2",
         "nikic/php-parser": "^v4.13.2",
         "guzzlehttp/guzzle":"^7.4",
