--- a/composer.json
+++ b/composer.json
@@ -50,13 +50,12 @@
      },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "phpunit/phpunit": "^9.5.20",
-        "squizlabs/php_codesniffer": "^3.7",
+        "phpunit/phpunit": "^9.6||^10",
+        "squizlabs/php_codesniffer": "^3.7.1",
         "sebastian/phpcpd": "^6.0.3",
-        "phploc/phploc": "^7.0.2",
-        "phpstan/phpstan": "^1.9.3",
-        "symfony/property-access": "^6.0",
-        "icanhazstring/composer-unused": "^0.8.2",
+        "phpstan/phpstan": "^1.9.14",
+        "symfony/property-access": "^6.2.5",
+        "icanhazstring/composer-unused": "^0.8.6",
         "nikic/php-parser": "^v4.13.2",
         "guzzlehttp/guzzle":"^7.4",
         "guzzlehttp/psr7":"^2.4",
